# IVS_Calibration

./: .gitignore  README.md  inspect_params.py  pyproject.toml  second_derivative_attempt1504
data/benchmarks/: global_local_optimizers_With_Constraints_20260309.csv  global_optimizers_RMSE_20260303_202057.csv  global_optimizers_RMSE_20260303_211247.csv  init_method_benchmark_20260310.csv  local_optimizers_RMSE_20260302_094256.csv  local_optimizers_RMSE_20260303_212815.csv  local_optimizers_RMSE_20260304_131448.csv  local_optimizers_RMSE_Pre_Constraints.csv
src/global optimisation/: Differential_evolution.py
src/ivs_calibration/: ivs_calibration.py
src/smoothing_spline/implementation/: spline_model.py
src/smoothing_spline/optimisation/: fit_spline.py
src/smoothing_spline/testing/: spline_diagnostics.py  weighting_ablation.py
src/svi/implementation/: svi_model.py
src/svi/optimisation/: SVI_SliceFit.py  arbitrage.py  calendar_arbitrage.py  calender_arbitrage.py  constraints.py  fit_svi.py  global_optimizers.py  local_optimizers.py  plot_svi_slice.py
src/svi/testing/: benchmark_global_optimizers.py  benchmark_local_optimizers.py  (+2 more)
src/utils/: Plot_Multi_Slice.py  Plot_Single_Slice.py  Plot_Surface.py  black_scholes.py  implied_vol_comments0912  plotting.py  root_finder.py
tests/: JL-test.py  debug_surface2.py  test_BS.py  test_implied_vol.py  test_implied_vol_comment0912  test_parameter_scan.py  test_roundtrip.py  test_spline_model.py  test_svi_math.py  test_svi_slice.py  verify_plot_spline_slice.py  verify_plot_spline_surface.py
tests/data/: Surfaces.xlsx
