[project]
name = "ivs-calibration"
version = "0.1.0"
description = ""
authors = [
    {name = "CameronTurner10",email = "C.Turner2-23@student.lboro.ac.uk"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "ivs_calibration", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
